ZezeJava: 修正Online的一些警告